--- a/src/components/layouts/CMSPage.astro
+++ b/src/components/layouts/CMSPage.astro
@@ -1,5 +1,7 @@
 ---
-import '../style/demo-styling.css'
+import '../../style/demo-styling.css'
+import Header from '../header/Header.astro';
+import Footer from '../footer/Footer.astro';
 
 export interface Props {
 	title: string;
@@ -17,7 +19,9 @@ const { title } = Astro.props as Props;
 	<title>{title}</title>
 </head>
 <body>
+  <Header title={title} />
 	<slot />
+  <Footer />
 </body>
 </html>
 
